Fixing Menu Bar on Mobile Devices

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -27,7 +27,6 @@
       // Line 2 - Hide
       &:nth-child(2) {
         opacity: 0 !important;
-        animation-play-state: paused !important;
       }
       // Line 3 - Rotate
       &:nth-child(3) {
